fix: Center align header

--- a/menu-app/src/app/util-components/covid-modal/covid-modal.component.scss
+++ b/menu-app/src/app/util-components/covid-modal/covid-modal.component.scss
@@ -7,6 +7,10 @@
 .modal-header {
   font-size: 28px;
   font-weight: 500;
+  &.text-center {
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .form-check {
